<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">rpz</string>
    <string name="about">About</string>
    <string name="action_example">Example exercise</string>
    <string name="action_settings">Properties</string>
    <string name="appearance_preferences">Appearance</string>
    <string name="cancel_option">Cancel</string>
    <string name="choose_exercise">Choose your next exercise</string>
    <string name="choose_your_theme">Choose your style</string>
    <string name="current_exercise">Current exercise</string>
    <string name="dashboard_title">Dashboard</string>
    <string name="delete">Delete</string>
    <string name="delete_routine_short">Delete %s?</string>
    <string name="delete_workout_short">Delete %s?</string>
    <string name="elapsedtime_title">Elapsed time</string>
    <string name="exercise_detail_text_description">Description</string>
    <string name="exercise_insert_conflict">Exercise with name %s already present.</string>
    <string name="exercise_name">Exercise name</string>
    <string name="exercise_saved">Exercise %s added</string>
    <string name="exerciseconfiguration_configuration_of">Configuration: %s</string>
    <string name="exerciseconfiguration_exercise_repetitions">Number of repetitions</string>
    <string name="exerciseconfiguration_exercise_time">Exercise duration</string>
    <string name="exerciseconfiguration_exercise_type_text">Exercise type</string>
    <string name="exerciseconfiguration_saved">Configuration of exercise %s changed.</string>
    <string name="exercises">Exercises</string>
    <string name="history">History</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="new_exercise">New exercise</string>
    <string name="new_routine">New routine</string>
    <string name="next_exercise">Next</string>
    <string name="no_exercises_in_routine">No exercises in the routine</string>
    <string name="repetition">Repetitions</string>
    <string name="routine_deleted">Routine %s deleted</string>
    <string name="ok_option">Ok</string>
    <string name="title_activity_fit_settings">Properties</string>
    <string name="time">Time</string>
    <string name="timegetter_minute">Minutes</string>
    <string name="timegetter_second">Seconds</string>
    <string name="title_activity_fit_nav_drawer">he-y-yo</string>
    <string name="workout_finished">Finished</string>
    <string name="workout_time_total">Total</string>
    <string name="workouts">Workouts</string>
    <string name="workout_time_exercise">Exercise</string>
    <string name="workout_routine">Exercise: %s</string>
    <string name="theme_title">Theme</string>
    <string name="theme_choose_text">Choose your theme</string>
    <string name="statistics">Statistic</string>
    <string name="start_workout">Start workout</string>
    <string name="routines">Routines</string>
    <string name="routine_list_options_add">Add exercise</string>
    <string name="routine_detail_view_routine_name_text">Name of the routine</string>
    <string name="routine_detail_options_add">Add exercise to routine</string>
    <string name="text_current_weight">Current weight</string>
    <string name="bmi_text">BMI</string>
    <string name="add_weight_title">Add weight</string>
    <string name="weight">Weight</string>
    <string name="advice_theme_title">Advice</string>
    <string name="advice_theme_text">You changed the style.\nIf you would like to see the changes immediately, the app has to restart.\n</string>
    <string name="how_are_you">Your name</string>
    <string name="no_weight_value">No weight added</string>
    <string name="add_weight_message">Add your current weight</string>
    <string name="add_weight_error">You have to introduce a number</string>
    <string name="duration">Duration</string>
    <string name="user_fragment_title">Me</string>
    <string name="user_name_hint">Tell me your name</string>
    <string name="user_size_hint">Your height in cm</string>
    <string name="action_copy">Copy</string>
    <string name="action_delete">Delete</string>
    <string name="workout_pause">Pause</string>
    <string name="what_would_you_do">What do you want to do?</string>
    <string name="choosemaxrepetitions">What are your max repetitions</string>
    <string name="edit">Edit</string>
    <string name="exercise">Exercise</string>
    <string name="maxrepetitions">Repetitions</string>
    <string name="not_started">00:00</string>
    <string name="stop_workout">Really stop workout?</string>
    <string name="error_no_exercises">Without exercises there\'s no workout</string>
    <string name="details">Details</string>
    <string name="resume_hint_total_pause">Total pause</string>
    <string name="resume_hint_total_time">Total time</string>
    <string name="summary">Summary</string>
    <string name="hint">Hint</string>
    <string name="description">Enter your description</string>
    <string name="archived">Archive</string>
    <string name="action_archive">Archive</string>
    <string name="action_archive_description">The current workout is going to be archived</string>
    <string name="action_edit">Edit</string>
    <string name="action_edit_description">Change this workout</string>
    <string name="routine_summary">%s rounds</string>
    <string name="action_dearchive">Activate</string>
    <string name="action_dearchive_description">Show this workout again</string>
    <string name="set_info">Set %s/%s</string>
    <string name="rounds_info">Round %s/%s</string>
    <string name="sets">Sets %s</string>
    <string name="routineDetail_rounds">Number of rounds</string>
    <string name="set_pause">Set pause in seconds</string>
    <string name="spot_new_exercise">New exercise</string>
    <string name="spot_new_exercise_desc">Click this to add a new exercise. You can use it in your workouts later.</string>
    <string name="user_name">Your name</string>
    <string name="title_activity_export_import_db">ExportImportDB</string>
    <string name="action_copy_description">The current workout will be copied</string>
    <string name="action_delete_description">The workout will be deleted</string>
    <string name="exercise_datetime"><![CDATA[Date & Time]]></string>
    <string name="user_size">Size</string>
    <string name="weight_hint">Tell me your weight and I calculate your BMI</string>
    <string name="personal_date">Personal preferences</string>
    <string name="round">Round</string>
    <string name="spot_new_exercise_configuration">New exercise</string>
    <string name="spot_new_exercise_configuration_desc">By clicking here you can add a new Workout</string>
    <string name="spot_rename_workout">Name of the workout</string>
    <string name="spot_rename_workout_desc">Click here to rename your workout</string>
    <string name="spot_workout_rounds_desc">You can choose how many rounds you try to survive</string>
    <string name="spot_workout_pause_desc">Make the right amount of pause between the sets</string>
    <string name="ARMS">Arms</string>
    <string name="CORE">Core</string>
    <string name="LEGS">Legs</string>
    <string name="PULL">Pull</string>
    <string name="PUSH">Push</string>
    <string name="BREAST">Breast</string>
    <string name="SHOULDER">Shoulder</string>
    <string name="LOWER_BACK">Lower back</string>
    <string name="UPPER_BACK">Upper back</string>
    <string name="youtube_serch_term_description">Search tearms for Youtube</string>
    <string name="spot_new_routine">New workout</string>
    <string name="spot_new_routine_desc">Here you can add your new workout</string>
    <string name="exercise_weight">Weight</string>
    <string name="set">Set</string>
    <string name="menu_style">Menu style</string>
    <string name="options">Options</string>
    <string name="reset_options">Reset hints</string>
    <string name="menu_style_summary">Switch on this option, if you want a drawer on the left side</string>
    <string name="reset_options_summary">Click this if you want to reset the notifications to help you understand the app</string>
    <string name="menu_style_title">By changing the menu style the app will be restarted</string>
    <string name="calendar_swipe_hint">By swiping over the calendar you can view all your done workouts</string>
    <string name="welcome">Hello</string>
    <string name="welcome_description">rpz is your trainer, compagnion,motivator. rpz helps you to organize your training</string>
    <string name="welcome_exercise">Add your exercises or use the exercises already added</string>
    <string name="welcome_workouts">Create workouts and sweat. Observe your progress and enjoy your new you</string>
    <string name="weight_unit_kg">kg</string>
    <string name="introduce_height">Introduce your size to calculate values</string>
    <string name="empty_name">Empty</string>
    <string name="sets_hint">Sets</string>
    <string name="history_description">Find your completed workouts</string>
    <string name="history_month">All workouts of %s</string>
    <string name="configure_it">Configure Rpz</string>
    <string name="all_workouts">All Workouts</string>
    <string name="track_your_progress">Track your progress</string>
    <string name="workout_ongoing">Workout mode</string>
    <string name="progress">Progress</string>
    <string name="routine_name">Workout name</string>
    <string name="rename_workout">Rename workout</string>
    <string name="rename_workout_desc">Rename your workout</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="skip_over">Skip over</string>
    <string name="sign_in">Sign in</string>
    <string name="debug">Debug</string>
    <string name="copy_suffix">copy</string>
    <string name="editor_mode">Editor mode</string>
</resources>